Horizontal scrolling fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -603,7 +603,7 @@ $padding-bottom: 70px;
   background: $turquoise;
   padding-top: calc(140px + #{$OverlayImg});
   padding-bottom: 70px;
-  width: 100vw;
+  max-width: 100vw;
   overflow: hidden;
   .btn {
     &:after {
